# Session-Recall

./: .gitignore  LICENSE  NOTES.md  README.md  SNIPPET.md  Session_Recall Web UI.bat  Stop Session_Recall Web UI.bat  pyproject.toml
prompts/: phase_0.1_build_doc.md  phase_0.2.1_closeout.md  phase_0.2_full_corpus.md  phase_0.3_mcp_server.md  phase_0.4_adoption.md  phase_0.5.0_web_ui.md  phase_0.6.0_codex_corpus.md  phase_0.7.0_claudia_export_ingest.md
session_recall/: __init__.py  __main__.py  cli.py  config.py  indexer.py  parser.py  parser_claude_export.py  parser_codex.py  server.py  store.py  webui.py
tests/: helpers.py  test_claudia_export.py  test_codex_parser.py  test_freshness.py  test_incremental.py  test_parser.py  test_self_echo.py  test_server.py  test_sessions.py  test_webui.py
